# plngx-dissect

./: .dockerignore  .env.tmpl  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  paperless.py  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml  post-create.sh
.devcontainer/plngx-dissect-frontend/: package-lock.json
backend/: .gitignore  cache.py  document.py  field.py  history.py  main.py  matching.py  paperless.py  pattern.py  profile.py  profile_tasks.py  pyproject.toml  region.py  requirements-dev.txt  requirements.txt  results.py  simple_expr.py  test.py  utils.py
backend/templates/: index.html
plngx-dissect-frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
plngx-dissect-frontend/src/: App.tsx  AttributeListItem.tsx  ChecksCard.tsx  DocumentView.tsx  DocumentsCard.tsx  ErrorPage.tsx  FieldListItem.tsx  FieldsCard.tsx  HistoryCard.tsx  MatchingDocsCard.tsx  PatternEditor.tsx  PatternEditorContext.tsx  PatternPageCard.tsx  PatternTable.tsx  RegionListItem.tsx  RegionListItemPageNavigator.tsx  RegionsCard.tsx  RenamePatternButton.tsx  TextRun.css  hooks.ts  index.css  main.tsx  types.ts
plngx-dissect-frontend/src/PatternEditor/: PatternActionsButton.tsx  PatternEditor.tsx  PatternEditorContext.tsx  RenameButton.tsx  RenamePatternButton.tsx  SaveAsButton.tsx
plngx-dissect-frontend/src/PatternTable/: ErroredDocumentsCard.tsx  HistoryCard.tsx  MultiMatchedDocumentsCard copy.tsx  PatternTable.tsx  UnmatchedDocumentsCard.tsx
plngx-dissect-frontend/src/checks/: types.ts  (+15 more)
(+45 files in other folders)
